# iris

./: Cargo.toml  README.txt  iris.uml
src/: lib.rs
src/NetworkLayer/: body.rs  config.rs  connect.rs  customNetworkLayer.rs  decoder.rs  error.rs  into_url.rs  mod.rs  proxy.rs  redirect.rs  request.rs  response.rs  tls.rs  util.rs
src/dns/: mod.rs
