[package]
name = "iris"
version = "0.1.0"
description = "Networking Library for Modern Web Fuzzing"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
  "Cargo.toml",
  "src/**/**",
]

[dependencies]
bytes = "1.2"
http = "1"
http-body = "1"
tokio = { version = "1", features = ["sync"] }
