[package]
name = "iris"
version = "0.1.0"
description = "Networking Library for Modern Web Fuzzing"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
  "Cargo.toml",
  "src/**/**",
]

[dependencies]
base64 = "0.22"
http = "1"
url = "2.4"
bytes = "1.0"
serde = "1.0"
serde_urlencoded = "0.7.1"
tower-service = "0.3"
futures-core = { version = "0.3.28", default-features = false }
futures-util = { version = "0.3.28", default-features = false }
sync_wrapper = { version = "1.0", features = ["futures"] }

serde_json = { version = "1.0"}
## multipart
mime_guess = { version = "2.0", default-features = false}
encoding_rs = { version = "0.8"}
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1.1", features = ["http1", "client"] }
hyper-util = { version = "0.1.3", features = ["http1", "client", "client-legacy", "tokio"] }
h2 = { version = "0.4"}
once_cell = "1.18"
log = "0.4.17"
mime = "0.3.16"
percent-encoding = "2.3"
tokio = { version = "1.0", default-features = false, features = ["net", "time", "fs"] }
pin-project-lite = "0.2.11"
ipnet = "2.3"
hyper-rustls = { version = "0.27.0", default-features = false,  features = ["http1", "tls12"] }
rustls = { version = "0.23.4", features = ["std", "tls12"] }
rustls-pki-types = { version = "1.1.0", features = ["alloc"] }
tokio-rustls = { version = "0.26",  default-features = false, features = ["tls12"] }
webpki-roots = { version = "0.26.0"}
rustls-native-certs = { version = "0.7"}

cookie_crate = { version = "0.18.0", package = "cookie"}
cookie_store = { version = "0.21.0"}

## compression
async-compression = { version = "0.4.0", features = ["tokio", "zlib", "brotli", "gzip", "zstd"] }
tokio-util = { version = "0.7.9", default-features = false, features = ["codec", "io"]}

## socks
tokio-socks = { version = "0.5.2"}
h3 = { version = "0.0.6"}
h3-quinn = { version = "0.0.7"}
quinn = { version = "0.11.1", default-features = false, features = ["rustls", "runtime-tokio"]}
slab = { version = "0.4.9"} # just to get minimal versions working with quinn
futures-channel = { version = "0.3"}
rustls-pemfile = "2.1.3"


